--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,22 +22,20 @@ services:
     networks:
       - assignment-network
 
-  # Add your ingestion service(s) here
-  # Example:
-  #
-  # ingestion:
-  #   build: ./packages/ingestion
-  #   container_name: assignment-ingestion
-  #   environment:
-  #     DATABASE_URL: postgresql://postgres:postgres@postgres:5432/ingestion
-  #     API_BASE_URL: https://datasync-api.example.com
-  #     TARGET_API_KEY: your_api_key_here
-  #     # Note: Use header-based auth (X-API-Key header) for best rate limits
-  #   depends_on:
-  #     postgres:
-  #       condition: service_healthy
-  #   networks:
-  #     - assignment-network
+  ingestion:
+    build: ./packages/ingestion
+    container_name: assignment-ingestion
+    environment:
+      DATABASE_URL: postgresql://postgres:postgres@postgres:5432/ingestion
+      API_BASE_URL: ${API_BASE_URL:-http://datasync-dev-alb-101078500.us-east-1.elb.amazonaws.com/api/v1}
+      TARGET_API_KEY: ${TARGET_API_KEY:-ds_789d4d30306ef1c521c56b6bbe8e1435}
+      STREAM_TOKEN: ${STREAM_TOKEN:-}
+      BATCH_SIZE: ${BATCH_SIZE:-50000}
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - assignment-network
 
 volumes:
   assignment_postgres_data:
